@@ -1,3 +1,9 @@
+2013-04-23  Bill Schmidt  wschmidt@linux.vnet.ibm.com>
+
+	Backported from mainline.
+	PR rtl-optimization/56605
+	* gcc.target/powerpc/pr56605.c: New.
+
 2012-11-07  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/compile/20121107-1.c: New test.
