@@ -1,3 +1,10 @@
+2013-04-23  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+	    Steven Bosscher <steven@gcc.gnu.org>
+
+	Backported from mainline.
+	PR rtl-optimization/56605
+	* loop-iv.c (implies_p): Handle equal RTXs and subregs.
+
 2012-11-07  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR middle-end/55219
